page items chagnes

--- a/template/view.html
+++ b/template/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Search Recent Tweets</title>
+    <title>Scatter Plot For Top IMBD 250 Movies</title>
     <link
       rel="stylesheet"
       href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"
