--- a/template/view.html
+++ b/template/view.html
@@ -56,7 +56,7 @@ padding-top: 40px;
     <div class="col-sm-6 col-sm-offset-3">
       <h1>Scatter Plot For Top IMBD 250 Movies</h1>
       <div class='image_loader'>
-      <H2>Image Loading please Wait...</H2>
+      <H2>Scatter Plot Loading please Wait...</H2>
       </div>
       <img src="/sactter" alt="Girl in a jacket"  id= "myimg" class="img-fluid" alt="Responsive image">
 
